--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(ImageAnalysis)
+project(ImageAnalysis VERSION 1.0.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -21,3 +21,23 @@ add_executable(ImageAnalysis
 )
 
 target_link_libraries(ImageAnalysis ${OpenCV_LIBS})
+
+# Настройка установки
+install(TARGETS ImageAnalysis
+    RUNTIME DESTINATION bin
+)
+
+install(DIRECTORY include/
+    DESTINATION include
+    FILES_MATCHING PATTERN "*.h"
+)
+
+install(DIRECTORY examples/
+    DESTINATION examples
+    OPTIONAL
+)
+
+install(FILES README.md
+    DESTINATION .
+    OPTIONAL
+)
